--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       </div>
     </header>
     <main>
-      <section class="container-fluid" id="maps-indonesia" style="width: 100%; height:800px"></section>
+      <section class="container-fluid" id="maps-indonesia" style="width: 100%; height:100vh"></section>
     </main><!-- Footer start -->
     <footer class="section-footer">
       <div class="top-wrapper">
