--- a/index.html
+++ b/index.html
@@ -54,7 +54,46 @@
       </div>
     </header>
     <main>
-      <section class="container-fluid" id="maps-indonesia" style="width: 100%; height:800px"></section>
+      <section class="section-course">
+        <div class="container py-3 py-lg-5 px-4 px-md-0">
+          <div class="row"> 
+            <h4>Persebaran Penerima</h4>
+            <p>Data berasal dari seluruh Indonesia tahun 2020-2024 dengan skema Semi Bansos dan Skema Normal (Gelombang 1-69).</p>
+          </div>
+        </div>
+        <div class="container-fluid containe-lg position-relative">
+          <div class="container">
+            <div class="row pipe-line-1">
+              <div class="col-6 p-3"><span class="display-5">18,887,737</span>
+                <p>Total Penerima Program</p>
+              </div>
+              <div class="col-6 p-3"><span class="display-5">Hellow World</span></div>
+            </div>
+          </div>
+        </div>
+        <div class="container-fluid containe-lg position-relative">
+          <div class="container">
+            <div class="row pipe-line-2">
+              <div class="col-12 p-3">
+                <h4>Persebaran Penerima</h4>
+              </div>
+              <div class="col-6 p-3"><span class="display-5">18,887,737</span>
+                <p>Total Penerima Program</p>
+              </div>
+              <div class="col-6 p-3"><span class="display-5">Hellow World</span></div>
+            </div>
+          </div>
+        </div>
+        <div class="container-fluid containe-lg position-relative">
+          <div class="container">
+            <div class="row pipe-line-2">
+              <div class="col-10 p-3"><span class="display-5">18,887,737</span>
+                <p>Total Penerima Program</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main><!-- Footer start -->
     <footer class="section-footer">
       <div class="top-wrapper">
