--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
       </div>
     </header>
     <main>
+      <section class="container-fluid" id="maps-indonesia" style="width: 100%; height:100vh"></section>
       <section class="section-course">
         <div class="container py-3 py-lg-5 px-4 px-md-0">
           <div class="row"> 
