--- a/index.html
+++ b/index.html
@@ -57,39 +57,111 @@
       <section class="container-fluid" id="maps-indonesia" style="width: 100%; height:100vh"></section>
       <section class="section-course">
         <div class="container py-3 py-lg-5 px-4 px-md-0">
-          <div class="row"> 
+          <div class="row text-center">
             <h4>Persebaran Penerima</h4>
             <p>Data berasal dari seluruh Indonesia tahun 2020-2024 dengan skema Semi Bansos dan Skema Normal (Gelombang 1-69).</p>
           </div>
         </div>
         <div class="container-fluid containe-lg position-relative">
           <div class="container">
-            <div class="row pipe-line-1">
-              <div class="col-6 p-3"><span class="display-5">18,887,737</span>
-                <p>Total Penerima Program</p>
+            <div class="row pipe-line-1 py-5">
+              <div class="col-6 p-3">
+                <div class="d-flex align-items-center justify-content-center h-100">
+                  <div><span class="display-5">18,887,737</span>
+                    <p class="m-0">Total Penerima Program</p>
+                  </div>
+                </div>
               </div>
-              <div class="col-6 p-3"><span class="display-5">Hellow World</span></div>
+              <div class="col-6 p-3"></div>
             </div>
           </div>
         </div>
         <div class="container-fluid containe-lg position-relative">
           <div class="container">
-            <div class="row pipe-line-2">
-              <div class="col-12 p-3">
+            <div class="row pipe-line-2 py-5">
+              <div class="col-12 text-center">
                 <h4>Persebaran Penerima</h4>
               </div>
-              <div class="col-6 p-3"><span class="display-5">18,887,737</span>
-                <p>Total Penerima Program</p>
+              <div class="row">
+                <div class="col-4 text-center">
+                  <h5 class="h2">38</h5>
+                  <p class="m-0">dari 38 Provinsi</p>
+                </div>
+                <div class="col-4 text-center">
+                  <h5 class="h2">514</h5>
+                  <p class="m-0">dari 514 Kabupaten / Kota</p>
+                </div>
+                <div class="col-4 text-center">
+                  <h5 class="h2">7.094</h5>
+                  <p class="m-0">dari 7.094 Kecamatan</p>
+                </div>
               </div>
-              <div class="col-6 p-3"><span class="display-5">Hellow World</span></div>
             </div>
           </div>
         </div>
         <div class="container-fluid containe-lg position-relative">
           <div class="container">
-            <div class="row pipe-line-2">
-              <div class="col-10 p-3"><span class="display-5">18,887,737</span>
-                <p>Total Penerima Program</p>
+            <div class="row pipe-line-3 py-5 justify-content-center">
+              <div class="col-lg-8">
+                <div class="d-flex align-items-center justify-content-center h-100">
+                  <div class="quote-lean"> <i>“Prakerja adalah program kerja pemerintah yang ke-4 paling dirasakan manfaatnya, setelah Bantuan Langsung Tunai, Kartu Indonesia Sehat, dan Kartu Indonesia Pintar.” </i><br><b>- Poltracking Indonesia 2023</b></div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="section-course">
+        <div class="container py-3 py-lg-5 px-4 px-md-0">
+          <div class="row text-center">
+            <h4>Persebaran Penerima</h4>
+            <p>Data berasal dari seluruh Indonesia tahun 2020-2024 dengan skema Semi Bansos dan Skema Normal (Gelombang 1-69).</p>
+          </div>
+        </div>
+        <div class="container-fluid containe-lg position-relative">
+          <div class="container">
+            <div class="row pipe-line-1 py-5">
+              <div class="col-6 p-3">
+                <div class="d-flex align-items-center justify-content-center h-100">
+                  <div><span class="display-5">18,887,737</span>
+                    <p class="m-0">Total Penerima Program</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-6 p-3"></div>
+            </div>
+          </div>
+        </div>
+        <div class="container-fluid containe-lg position-relative">
+          <div class="container">
+            <div class="row pipe-line-2 py-5">
+              <div class="col-12 text-center">
+                <h4>Persebaran Penerima</h4>
+              </div>
+              <div class="row">
+                <div class="col-4 text-center">
+                  <h5 class="h2">38</h5>
+                  <p class="m-0">dari 38 Provinsi</p>
+                </div>
+                <div class="col-4 text-center">
+                  <h5 class="h2">514</h5>
+                  <p class="m-0">dari 514 Kabupaten / Kota</p>
+                </div>
+                <div class="col-4 text-center">
+                  <h5 class="h2">7.094</h5>
+                  <p class="m-0">dari 7.094 Kecamatan</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="container-fluid containe-lg position-relative">
+          <div class="container">
+            <div class="row pipe-line-3 py-5 justify-content-center">
+              <div class="col-lg-8">
+                <div class="d-flex align-items-center justify-content-center h-100">
+                  <div class="quote-lean"> <i>“Prakerja adalah program kerja pemerintah yang ke-4 paling dirasakan manfaatnya, setelah Bantuan Langsung Tunai, Kartu Indonesia Sehat, dan Kartu Indonesia Pintar.” </i><br><b>- Poltracking Indonesia 2023</b></div>
+                </div>
               </div>
             </div>
           </div>
