--- a/index.html
+++ b/index.html
@@ -54,113 +54,147 @@
       </div>
     </header>
     <main>
-      <section class="container-fluid" id="maps-indonesia" style="width: 100%; height:100vh"></section>
-      <section class="section-course">
-        <div class="container py-3 py-lg-5 px-4 px-md-0">
+      <section class="section-hero">
+        <h1 class="main-heading h3">
+           Statistik Program <span>Prakerja</span></h1>
+        <div class="container-fluid" id="maps-indonesia"></div>
+      </section>
+      <section class="section-course py-3 py-lg-5">
+        <div class="container px-4 px-md-0">
           <div class="row text-center">
             <h4>Persebaran Penerima</h4>
             <p>Data berasal dari seluruh Indonesia tahun 2020-2024 dengan skema Semi Bansos dan Skema Normal (Gelombang 1-69).</p>
           </div>
-        </div>
-        <div class="container-fluid containe-lg position-relative">
-          <div class="container">
-            <div class="row pipe-line-1 py-5">
-              <div class="col-6 p-3">
-                <div class="d-flex align-items-center justify-content-center h-100">
-                  <div><span class="display-5">18,887,737</span>
-                    <p class="m-0">Total Penerima Program</p>
-                  </div>
-                </div>
-              </div>
-              <div class="col-6 p-3"></div>
-            </div>
-          </div>
-        </div>
-        <div class="container-fluid containe-lg position-relative">
-          <div class="container">
-            <div class="row pipe-line-2 py-5">
-              <div class="col-12 text-center">
-                <h4>Persebaran Penerima</h4>
-              </div>
-              <div class="row">
-                <div class="col-4 text-center">
-                  <h5 class="h2">38</h5>
-                  <p class="m-0">dari 38 Provinsi</p>
-                </div>
-                <div class="col-4 text-center">
-                  <h5 class="h2">514</h5>
-                  <p class="m-0">dari 514 Kabupaten / Kota</p>
-                </div>
-                <div class="col-4 text-center">
-                  <h5 class="h2">7.094</h5>
-                  <p class="m-0">dari 7.094 Kecamatan</p>
+          <div class="row">
+            <div class="col-6 p-3 bg-o500 rounded-bottom-left pipeline">
+              <div class="d-flex align-items-center justify-content-center h-100">
+                <div class="text-center">
+                  <h3 class="display-5 text-white">18,887,737</h3>
+                  <p class="m-0 text-white">Total Penerima Program</p>
                 </div>
               </div>
             </div>
+            <div class="col-6 p-3 bg-pipeline pipeline rounded-top-right" style="background-image: url('img/img-bg-alumni-1.webp');"></div>
           </div>
-        </div>
-        <div class="container-fluid containe-lg position-relative">
-          <div class="container">
-            <div class="row pipe-line-3 py-5 justify-content-center">
-              <div class="col-lg-8">
-                <div class="d-flex align-items-center justify-content-center h-100">
-                  <div class="quote-lean"> <i>“Prakerja adalah program kerja pemerintah yang ke-4 paling dirasakan manfaatnya, setelah Bantuan Langsung Tunai, Kartu Indonesia Sehat, dan Kartu Indonesia Pintar.” </i><br><b>- Poltracking Indonesia 2023</b></div>
-                </div>
+          <div class="row bg-b800 text-white pipeline d-flex align-items-center rounded-bottom-right rounded-top-left py-5">
+            <div class="col-12 text-center">
+              <h4 class="text-white mb-4">Tersebar di</h4>
+            </div>
+            <div class="col-4 text-center">
+              <h3 class="h2">38</h3>
+              <p class="m-0">dari 38 Provinsi</p>
+            </div>
+            <div class="col-4 text-center">
+              <h3 class="h2">514</h3>
+              <p class="m-0">dari 514 Kabupaten / Kota</p>
+            </div>
+            <div class="col-4 text-center">
+              <h3 class="h2">7.094</h3>
+              <p class="m-0">dari 7.094 Kecamatan</p>
+            </div>
+          </div>
+          <div class="row bg-b700 text-white pipeline d-flex align-items-center rounded-bottom-left rounded-top-right py-5 justify-content-center">
+            <div class="col-lg-8">
+              <div class="d-flex align-items-center justify-content-center h-100">
+                <div class="quote-lean"> <i>“Prakerja adalah program kerja pemerintah yang ke-4 paling dirasakan manfaatnya, setelah Bantuan Langsung Tunai, Kartu Indonesia Sehat, dan Kartu Indonesia Pintar.” </i><br><b>- Poltracking Indonesia 2023</b></div>
               </div>
             </div>
           </div>
         </div>
       </section>
-      <section class="section-course">
-        <div class="container py-3 py-lg-5 px-4 px-md-0">
+      <section class="py-5">
+        <div class="container">
+          <h4 class="text-center mb-4">Profil Penerima</h4>
+          <div class="row"> 
+            <div class="col-lg-4"> <span class="skeleton-box w-100 rounded" style="height:200px"></span></div>
+            <div class="col-lg-4"> 
+              <div class="skeleton-box w-100 rounded" style="height:200px"></div>
+            </div>
+            <div class="col-lg-4"> 
+              <div class="skeleton-box w-100 rounded" style="height:200px"></div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="py-5">
+        <div class="container">
+          <h4 class="text-center mb-4">Manfaat yang dirasakan setelah mengikuti Program Prakerja</h4>
+          <div class="row d-flex justify-content-center">
+            <div class="col-lg-10"> <span class="skeleton-box w-100 rounded" style="height:200px"></span></div>
+          </div>
+        </div>
+      </section>
+      <section class="section-course py-3 py-lg-5">
+        <div class="container px-4 px-md-0">
           <div class="row text-center">
             <h4>Persebaran Penerima</h4>
             <p>Data berasal dari seluruh Indonesia tahun 2020-2024 dengan skema Semi Bansos dan Skema Normal (Gelombang 1-69).</p>
           </div>
-        </div>
-        <div class="container-fluid containe-lg position-relative">
-          <div class="container">
-            <div class="row pipe-line-1 py-5">
-              <div class="col-6 p-3">
-                <div class="d-flex align-items-center justify-content-center h-100">
-                  <div><span class="display-5">18,887,737</span>
-                    <p class="m-0">Total Penerima Program</p>
-                  </div>
+          <div class="row">
+            <div class="col-6 p-3 bg-o600 rounded-bottom-left pipeline">
+              <div class="d-flex align-items-center justify-content-center h-100">
+                <div class="text-white p-4">
+                  <p>
+                    Berdasarkan studi DEFINIT, program Prakerja meningkatkan daya saing penerima dalam meningkatkan peluang mendapatkan pekerjaan (94,7%), 
+                    meningkatkan keterampilan, kompetensi, dan produktivitas (82,8%), dan meningkatkan motivasi belajar teknologi digital (99,0%).
+                  </p>
+                  <p>Sebanyak 85,9% responden berencana menggunakan sertifikat Prakerja apabila akan melamar pekerjaan di masa depan.</p><a class="text-white" href="#">Sumber</a>
                 </div>
               </div>
-              <div class="col-6 p-3"></div>
             </div>
-          </div>
-        </div>
-        <div class="container-fluid containe-lg position-relative">
-          <div class="container">
-            <div class="row pipe-line-2 py-5">
-              <div class="col-12 text-center">
-                <h4>Persebaran Penerima</h4>
-              </div>
-              <div class="row">
-                <div class="col-4 text-center">
-                  <h5 class="h2">38</h5>
-                  <p class="m-0">dari 38 Provinsi</p>
-                </div>
-                <div class="col-4 text-center">
-                  <h5 class="h2">514</h5>
-                  <p class="m-0">dari 514 Kabupaten / Kota</p>
-                </div>
-                <div class="col-4 text-center">
-                  <h5 class="h2">7.094</h5>
-                  <p class="m-0">dari 7.094 Kecamatan</p>
+            <div class="col-6 p-3 bg-pipeline pipeline rounded-top-right" style="background-image: url('img/img-bg-lp.webp');">
+              <div class="d-flex align-items-center justify-content-center h-100">
+                <div class="text-center">
+                  <h6 class="text-white">Jumlah Lembaga Pelatihan</h6>
+                  <h4 class="text-white display-5">328</h4>
                 </div>
               </div>
             </div>
           </div>
-        </div>
-        <div class="container-fluid containe-lg position-relative">
-          <div class="container">
-            <div class="row pipe-line-3 py-5 justify-content-center">
-              <div class="col-lg-8">
-                <div class="d-flex align-items-center justify-content-center h-100">
-                  <div class="quote-lean"> <i>“Prakerja adalah program kerja pemerintah yang ke-4 paling dirasakan manfaatnya, setelah Bantuan Langsung Tunai, Kartu Indonesia Sehat, dan Kartu Indonesia Pintar.” </i><br><b>- Poltracking Indonesia 2023</b></div>
+          <div class="row">
+            <div class="col-6 p-3 bg-pipeline pipeline rounded-top-left" style="background-image: url('img/img-bg-pelatihan.webp');">
+              <div class="d-flex align-items-center justify-content-center h-100">
+                <div class="text-center">
+                  <h6 class="text-white">Jumlah Lembaga Pelatihan</h6>
+                  <h4 class="text-white display-5">328</h4>
+                </div>
+              </div>
+            </div>
+            <div class="col-6 text-center py-5 bg-b800 pipeline text-white rounded-bottom-right">
+              <h3 class="h2">38</h3>
+              <p class="m-0">dari 38 Provinsi erencana menggunakan sertifikat Prakerja apabila akan melamar pekerjaan di masa depan.</p>
+            </div>
+          </div>
+          <div class="row pipe-line-6 justify-content-center py-lg-5 py-4">
+            <div class="col-8">
+              <div class="text-center"> 
+                <h4 class="mb-4">5 Topik Pelatihan Paling Diminati di Prakerja</h4>
+              </div>
+              <div class="d-flex justify-content-between w-100">
+                <div class="d-flex flex-column text-center gap-1">
+                  <div class="mb-3"><img src="img/icon-1.svg" width="64" alt=""></div>
+                  <h6>21%</h6>
+                  <p class="text-secondary fs-7">Penjualan dan Pemasaran</p>
+                </div>
+                <div class="d-flex flex-column text-center gap-1">
+                  <div class="mb-3"><img src="img/icon-2.svg" width="64" alt=""></div>
+                  <h6>12%</h6>
+                  <p class="text-secondary fs-7">Makanan dan Minuman</p>
+                </div>
+                <div class="d-flex flex-column text-center gap-1">
+                  <div class="mb-3"> <img src="img/icon-3.svg" width="64" alt=""></div>
+                  <h6>11%</h6>
+                  <p class="text-secondary fs-7">Gaya Hidup</p>
+                </div>
+                <div class="d-flex flex-column text-center gap-1">
+                  <div class="mb-3"> <img src="img/icon-4.svg" width="64" alt=""></div>
+                  <h6>8%</h6>
+                  <p class="text-secondary fs-7">Manajemen</p>
+                </div>
+                <div class="d-flex flex-column text-center gap-1">
+                  <div class="mb-3"> <img src="img/icon-5.svg" width="64" alt=""></div>
+                  <h6>5%</h6>
+                  <p class="text-secondary fs-7">Teknik</p>
                 </div>
               </div>
             </div>
