--- a/index.html
+++ b/index.html
@@ -1,26 +1,26 @@
 <!DOCTYPE html>
-<html lang="id" page-class="home">
+<html lang="id" translate="no" page-class="home">
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://www.prakerja.go.id/favicon.ico" rel="shortcut icon">
     <title>Statistik Program Prakerja - prakerja.go.id</title>
     <meta name="description" content="Informasi statistik penerima prakerja selama periode 2020 - 2024.">
-    <link rel="canonical" href="https://skillsweek.prakerja.go.id">
-    <link rel="alternate" hreflang="id" href="https://skillsweek.prakerja.go.id">
-    <meta property="og:image" content="https://raw.githubusercontent.com/Kartu-Prakerja/skill-week/main/img/skillsweek-by-prakerja-cover.jpg">
+    <link rel="canonical" href="https://statistik-penerima.prakerja.go.id">
+    <link rel="alternate" hreflang="id" href="https://statistik-penerima.prakerja.go.id">
+    <meta property="og:image" content="https://raw.githubusercontent.com/Kartu-Prakerja/skill-week/main/img/statistik-penerima-by-prakerja-cover.jpg">
     <meta property="og:image:width" content="400">
     <meta property="og:image:height" content="627">
     <meta property="og:locale" content="id_ID">
     <meta meta property="og:type" content="website">
     <meta property="og:description" content="Informasi statistik penerima prakerja selama periode 2020 - 2024.">
     <meta property="og:site_name" content="Prakerja">
-    <meta property="og:url" content="https://raw.githubusercontent.com/Kartu-Prakerja/skill-week/main/img/skillsweek-by-prakerja-cover.jpg">
-    <meta name="twitter:card" content="https://raw.githubusercontent.com/Kartu-Prakerja/skill-week/main/img/skillsweek-by-prakerja-cover.jpg">
+    <meta property="og:url" content="https://raw.githubusercontent.com/Kartu-Prakerja/skill-week/main/img/statistik-penerima-by-prakerja-cover.jpg">
+    <meta name="twitter:card" content="https://raw.githubusercontent.com/Kartu-Prakerja/skill-week/main/img/statistik-penerima-by-prakerja-cover.jpg">
     <meta name="twitter:site" content="">
     <meta name="twitter:title" content="Statistik Program Prakerja - prakerja.go.id">
     <meta name="twitter:description" content="Informasi statistik penerima prakerja selama periode 2020 - 2024.">
-    <meta name="twitter:image" content="https://raw.githubusercontent.com/Kartu-Prakerja/skill-week/main/img/skillsweek-by-prakerja-cover.jpg">
+    <meta name="twitter:image" content="https://raw.githubusercontent.com/Kartu-Prakerja/skill-week/main/img/statistik-penerima-by-prakerja-cover.jpg">
     <meta name="twitter:image:width" content="1200">
     <meta name="twitter:image:height" content="630">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
