--- a/index.html
+++ b/index.html
@@ -126,10 +126,6 @@
       </section>
       <section class="section-course py-3 py-lg-5">
         <div class="container px-4 px-md-0">
-          <div class="row text-center">
-            <h4>Persebaran Penerima</h4>
-            <p>Data berasal dari seluruh Indonesia tahun 2020-2024 dengan skema Semi Bansos dan Skema Normal (Gelombang 1-69).</p>
-          </div>
           <div class="row">
             <div class="col-6 p-3 bg-o600 rounded-bottom-left pipeline">
               <div class="d-flex align-items-center justify-content-center h-100">
@@ -142,7 +138,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-6 p-3 bg-pipeline pipeline rounded-top-right" style="background-image: url('img/img-bg-lp.webp');">
+            <div class="col-6 p-3 bg-pipeline pipeline rounded-top-right" style="background-image: url('img/img-bg-lp-1.webp');">
               <div class="d-flex align-items-center justify-content-center h-100">
                 <div class="text-center">
                   <h6 class="text-white">Jumlah Lembaga Pelatihan</h6>
@@ -155,18 +151,19 @@
             <div class="col-6 p-3 bg-pipeline pipeline rounded-top-left" style="background-image: url('img/img-bg-pelatihan.webp');">
               <div class="d-flex align-items-center justify-content-center h-100">
                 <div class="text-center">
-                  <h6 class="text-white">Jumlah Lembaga Pelatihan</h6>
-                  <h4 class="text-white display-5">328</h4>
+                  <h6 class="text-white">Jumlah Pelatihan</h6>
+                  <h4 class="text-white display-5">109,165</h4>
                 </div>
               </div>
             </div>
-            <div class="col-6 text-center py-5 bg-b800 pipeline text-white rounded-bottom-right">
-              <h3 class="h2">38</h3>
-              <p class="m-0">dari 38 Provinsi erencana menggunakan sertifikat Prakerja apabila akan melamar pekerjaan di masa depan.</p>
+            <div class="col-6 text-center py-5 bg-b800 pipeline text-white rounded-bottom-right p-4">
+              <h6 class="text-white">Total Pendaftaran Pelatihan</h6>
+              <h3 class="display-5 text-white">29,165,063</h3>
+              <p class="m-0">Dengan rata-rata 1 penerima Prakerja mendaftarkan diri ke 1-2 pelatihan.</p>
             </div>
           </div>
-          <div class="row pipe-line-6 justify-content-center py-lg-5 py-4">
-            <div class="col-8">
+          <div class="row pipe-line-6 justify-content-center py-lg-5 py-4 bg-s100 rounded-bottom-left rounded-top-right">
+            <div class="col-10">
               <div class="text-center"> 
                 <h4 class="mb-4">5 Topik Pelatihan Paling Diminati di Prakerja</h4>
               </div>
@@ -195,6 +192,132 @@
                   <div class="mb-3"> <img src="img/icon-5.svg" width="64" alt=""></div>
                   <h6>5%</h6>
                   <p class="text-secondary fs-7">Teknik</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row pipe-line-6 justify-content-center py-lg-5 py-4 bg-b800 rounded-bottom-right rounded-top-left text-white">
+            <div class="col-10">
+              <p>Sejalan dengan survey CIPG yang menyatakan bahwa 7 pilihan pelatihan yang paling diminati adalah :</p>
+              <div class="row">
+                <div class="col-3 mb-3">
+                  <div class="stick-list d-flex">
+                    <div class="stick-number">1</div>
+                    <div class="px-2"><span>Makanan dan minuman</span></div>
+                  </div>
+                </div>
+                <div class="col-3 mb-3">
+                  <div class="stick-list d-flex">
+                    <div class="stick-number">2</div>
+                    <div class="px-2"><span>Penjualan dan pemasaran</span></div>
+                  </div>
+                </div>
+                <div class="col-3 mb-3">
+                  <div class="stick-list d-flex">
+                    <div class="stick-number">3</div>
+                    <div class="px-2"><span>Keuangan</span></div>
+                  </div>
+                </div>
+                <div class="col-3 mb-3">
+                  <div class="stick-list d-flex">
+                    <div class="stick-number">4</div>
+                    <div class="px-2"><span>Gaya hidup</span></div>
+                  </div>
+                </div>
+                <div class="col-3 mb-3">
+                  <div class="stick-list d-flex">
+                    <div class="stick-number">5</div>
+                    <div class="px-2"><span>TI</span></div>
+                  </div>
+                </div>
+                <div class="col-3 mb-3">
+                  <div class="stick-list d-flex">
+                    <div class="stick-number">6</div>
+                    <div class="px-2"><span>Manajemen</span></div>
+                  </div>
+                </div>
+                <div class="col-3 mb-3">
+                  <div class="stick-list d-flex">
+                    <div class="stick-number">7</div>
+                    <div class="px-2"><span>Pertanian</span></div>
+                  </div>
+                </div>
+              </div>
+              <p>Sebagian besar responden menyelesaikan pelatihan makanan dan minuman sebagai pelatihan pertama mereka, dan hampir setengahnya saat ini sedang mempersiapkan bisnis.</p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="py-5">
+        <div class="container">
+          <h4 class="text-center mb-4">Moda Pelatihan</h4>
+          <div class="row"> 
+            <div class="col-lg-6"> <span class="skeleton-box w-100 rounded" style="height:200px"></span></div>
+            <div class="col-lg-6">
+              <div class="skeleton-box w-100 rounded" style="height:200px"></div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="py-5">
+        <div class="container">
+          <h4 class="text-center mb-4">Rekening Pengiriman Insentif</h4>
+          <div class="row"> 
+            <div class="col-lg-6"> <span class="skeleton-box w-100 rounded" style="height:200px"></span></div>
+            <div class="col-lg-6">
+              <div class="skeleton-box w-100 rounded" style="height:200px"></div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="section-course py-3 py-lg-5">
+        <div class="container px-4 px-md-0">
+          <div class="row">
+            <div class="col-6 p-3 pipeline rounded-bottom-right bg-b800">
+              <div class="d-flex align-items-center justify-content-center h-100">
+                <div class="text-center text-white">
+                  <h6 class="text-white">Total Insentif </h6>
+                  <p>yang dibagikan ke 17,012,345 penerima tahun 2020-2024</p>
+                  <h4 class="text-white display-5">41,4 triliun</h4>
+                </div>
+              </div>
+            </div>
+            <div class="col-6 p-3 bg-pipeline pipeline rounded-bottom-left" style="background-image: url('img/img-bg-lp-1.webp');"></div>
+          </div>
+          <div class="row">
+            <div class="col-6 p-3 bg-pipeline pipeline rounded-top-right" style="background-image: url('img/img-bg-pelatihan.webp');"></div>
+            <div class="col-6 py-5 bg-b500 pipeline text-white rounded-top-left p-4">
+              <h6 class="text-white">Penggunaan Insentif Oleh Penerima</h6>
+              <div class="row">
+                <div class="col-12 mb-3">
+                  <div class="stick-list d-flex">
+                    <div class="stick-number">1</div>
+                    <div class="px-2"><span>Membeli pelatihan di luar Prakerja</span></div>
+                  </div>
+                </div>
+                <div class="col-12 mb-3">
+                  <div class="stick-list d-flex">
+                    <div class="stick-number">2</div>
+                    <div class="px-2"><span>Melakukan kegiatan penunjang belajar lain</span></div>
+                  </div>
+                </div>
+                <div class="col-12 mb-3">
+                  <div class="stick-list d-flex">
+                    <div class="stick-number">3</div>
+                    <div class="px-2"><span>Membeli keperluan pribadi</span></div>
+                  </div>
+                </div>
+                <div class="col-12 mb-3">
+                  <div class="stick-list d-flex">
+                    <div class="stick-number">4</div>
+                    <div class="px-2"><span>Sebagai modal usaha</span></div>
+                  </div>
+                </div>
+                <div class="col-12 mb-3">
+                  <div class="stick-list d-flex">
+                    <div class="stick-number">5</div>
+                    <div class="px-2"><span>Untuk membeli paket data / internet</span></div>
+                  </div>
                 </div>
               </div>
             </div>
