--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
       <section class="section-course py-3 py-lg-5">
         <div class="container px-4 px-md-0">
           <div class="row">
-            <div class="col-6 p-3 bg-o600 rounded-bottom-left pipeline">
+            <div class="col-lg-6 p-3 bg-o600 rounded-bottom-left pipeline">
               <div class="d-flex align-items-center justify-content-center h-100">
                 <div class="text-white p-4">
                   <p>
@@ -138,7 +138,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-6 p-3 bg-pipeline pipeline rounded-top-right" style="background-image: url('img/img-bg-lp-1.webp');">
+            <div class="col-lg-6 p-3 bg-pipeline pipeline rounded-top-right" style="background-image: url('img/img-bg-lp-1.webp');">
               <div class="d-flex align-items-center justify-content-center h-100">
                 <div class="text-center">
                   <h6 class="text-white">Jumlah Lembaga Pelatihan</h6>
@@ -148,7 +148,7 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-6 p-3 bg-pipeline pipeline rounded-top-left" style="background-image: url('img/img-bg-pelatihan.webp');">
+            <div class="col-lg-6 p-3 bg-pipeline pipeline rounded-top-left" style="background-image: url('img/img-bg-pelatihan.webp');">
               <div class="d-flex align-items-center justify-content-center h-100">
                 <div class="text-center">
                   <h6 class="text-white">Jumlah Pelatihan</h6>
@@ -156,18 +156,18 @@
                 </div>
               </div>
             </div>
-            <div class="col-6 text-center py-5 bg-b800 pipeline text-white rounded-bottom-right p-4">
+            <div class="col-lg-6 text-center py-5 bg-b800 pipeline text-white rounded-bottom-right p-4">
               <h6 class="text-white">Total Pendaftaran Pelatihan</h6>
               <h3 class="display-5 text-white">29,165,063</h3>
               <p class="m-0">Dengan rata-rata 1 penerima Prakerja mendaftarkan diri ke 1-2 pelatihan.</p>
             </div>
           </div>
           <div class="row pipe-line-6 justify-content-center py-lg-5 py-4 bg-s100 rounded-bottom-left rounded-top-right">
-            <div class="col-10">
+            <div class="col-lg-10">
               <div class="text-center"> 
                 <h4 class="mb-4">5 Topik Pelatihan Paling Diminati di Prakerja</h4>
               </div>
-              <div class="d-flex justify-content-between w-100">
+              <div class="d-flex flex-column flex-lg-row justify-content-between w-100">
                 <div class="d-flex flex-column text-center gap-1">
                   <div class="mb-3"><img src="img/icon-1.svg" width="64" alt=""></div>
                   <h6>21%</h6>
@@ -199,47 +199,47 @@
           <div class="row pipe-line-6 justify-content-center py-lg-5 py-4 bg-b800 rounded-bottom-right rounded-top-left text-white">
             <div class="col-10">
               <p>Sejalan dengan survey CIPG yang menyatakan bahwa 7 pilihan pelatihan yang paling diminati adalah :</p>
-              <div class="row">
-                <div class="col-3 mb-3">
+              <div class="row d-flex flex-column flex-lg-row">
+                <div class="col-lg-3 mb-3">
                   <div class="stick-list d-flex">
-                    <div class="stick-number">1</div>
-                    <div class="px-2"><span>Makanan dan minuman</span></div>
+                    <div class="stick-number bg-b500">1</div>
+                    <div class="stick-item px-2"><span>Makanan dan minuman</span></div>
                   </div>
                 </div>
-                <div class="col-3 mb-3">
+                <div class="col-lg-3 mb-3">
                   <div class="stick-list d-flex">
-                    <div class="stick-number">2</div>
-                    <div class="px-2"><span>Penjualan dan pemasaran</span></div>
+                    <div class="stick-number bg-b500">2</div>
+                    <div class="stick-item px-2"><span>Penjualan dan pemasaran</span></div>
                   </div>
                 </div>
-                <div class="col-3 mb-3">
+                <div class="col-lg-3 mb-3">
                   <div class="stick-list d-flex">
-                    <div class="stick-number">3</div>
-                    <div class="px-2"><span>Keuangan</span></div>
+                    <div class="stick-number bg-b500">3</div>
+                    <div class="stick-item px-2"><span>Keuangan</span></div>
                   </div>
                 </div>
-                <div class="col-3 mb-3">
+                <div class="col-lg-3 mb-3">
                   <div class="stick-list d-flex">
-                    <div class="stick-number">4</div>
-                    <div class="px-2"><span>Gaya hidup</span></div>
+                    <div class="stick-number bg-b500">4</div>
+                    <div class="stick-item px-2"><span>Gaya hidup</span></div>
                   </div>
                 </div>
-                <div class="col-3 mb-3">
+                <div class="col-lg-3 mb-3">
                   <div class="stick-list d-flex">
-                    <div class="stick-number">5</div>
-                    <div class="px-2"><span>TI</span></div>
+                    <div class="stick-number bg-b500">5</div>
+                    <div class="stick-item px-2"><span>TI</span></div>
                   </div>
                 </div>
-                <div class="col-3 mb-3">
+                <div class="col-lg-3 mb-3">
                   <div class="stick-list d-flex">
-                    <div class="stick-number">6</div>
-                    <div class="px-2"><span>Manajemen</span></div>
+                    <div class="stick-number bg-b500">6</div>
+                    <div class="stick-item px-2"><span>Manajemen</span></div>
                   </div>
                 </div>
-                <div class="col-3 mb-3">
+                <div class="col-lg-3 mb-3">
                   <div class="stick-list d-flex">
-                    <div class="stick-number">7</div>
-                    <div class="px-2"><span>Pertanian</span></div>
+                    <div class="stick-number bg-b500">7</div>
+                    <div class="stick-item px-2"><span>Pertanian</span></div>
                   </div>
                 </div>
               </div>
@@ -273,7 +273,7 @@
       <section class="section-course py-3 py-lg-5">
         <div class="container px-4 px-md-0">
           <div class="row">
-            <div class="col-6 p-3 pipeline rounded-bottom-right bg-b800">
+            <div class="col-lg-6 p-3 py-lg-5 pipeline rounded-bottom-right bg-b800">
               <div class="d-flex align-items-center justify-content-center h-100">
                 <div class="text-center text-white">
                   <h6 class="text-white">Total Insentif </h6>
@@ -282,41 +282,41 @@
                 </div>
               </div>
             </div>
-            <div class="col-6 p-3 bg-pipeline pipeline rounded-bottom-left" style="background-image: url('img/img-bg-lp-1.webp');"></div>
+            <div class="col-lg-6 p-3 py-lg-5 bg-pipeline pipeline rounded-bottom-left" style="background-image: url('img/img-temu-raya.webp');"></div>
           </div>
           <div class="row">
-            <div class="col-6 p-3 bg-pipeline pipeline rounded-top-right" style="background-image: url('img/img-bg-pelatihan.webp');"></div>
-            <div class="col-6 py-5 bg-b500 pipeline text-white rounded-top-left p-4">
+            <div class="col-lg-6 p-3 bg-pipeline pipeline rounded-top-right" style="background-image: url('img/img-temu-raya-2.webp');"></div>
+            <div class="col-lg-6 p-4 px-lg-5 py-5 bg-b500 pipeline text-white rounded-top-left">
               <h6 class="text-white">Penggunaan Insentif Oleh Penerima</h6>
               <div class="row">
-                <div class="col-12 mb-3">
+                <div class="col-12 mb-1">
                   <div class="stick-list d-flex">
-                    <div class="stick-number">1</div>
-                    <div class="px-2"><span>Membeli pelatihan di luar Prakerja</span></div>
+                    <div class="stick-number bg-b700">1</div>
+                    <div class="stick-item px-2"><span>Membeli pelatihan di luar Prakerja</span></div>
                   </div>
                 </div>
-                <div class="col-12 mb-3">
+                <div class="col-12 mb-1">
                   <div class="stick-list d-flex">
-                    <div class="stick-number">2</div>
-                    <div class="px-2"><span>Melakukan kegiatan penunjang belajar lain</span></div>
+                    <div class="stick-number bg-b700">2</div>
+                    <div class="stick-item px-2"><span>Melakukan kegiatan penunjang belajar lain</span></div>
                   </div>
                 </div>
-                <div class="col-12 mb-3">
+                <div class="col-12 mb-1">
                   <div class="stick-list d-flex">
-                    <div class="stick-number">3</div>
-                    <div class="px-2"><span>Membeli keperluan pribadi</span></div>
+                    <div class="stick-number bg-b700">3</div>
+                    <div class="stick-item px-2"><span>Membeli keperluan pribadi</span></div>
                   </div>
                 </div>
-                <div class="col-12 mb-3">
+                <div class="col-12 mb-1">
                   <div class="stick-list d-flex">
-                    <div class="stick-number">4</div>
-                    <div class="px-2"><span>Sebagai modal usaha</span></div>
+                    <div class="stick-number bg-b700">4</div>
+                    <div class="stick-item px-2"><span>Sebagai modal usaha</span></div>
                   </div>
                 </div>
-                <div class="col-12 mb-3">
+                <div class="col-12 mb-1">
                   <div class="stick-list d-flex">
-                    <div class="stick-number">5</div>
-                    <div class="px-2"><span>Untuk membeli paket data / internet</span></div>
+                    <div class="stick-number bg-b700">5</div>
+                    <div class="stick-item px-2"><span>Untuk membeli paket data / internet</span></div>
                   </div>
                 </div>
               </div>
