update click function on map

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <div class="col-6 p-3 bg-o500 rounded-bottom-left pipeline">
               <div class="d-flex align-items-center justify-content-center h-100">
                 <div class="text-center">
-                  <h3 class="display-5 text-white">18,887,737</h3>
+                  <h3 class="display-5 text-white" id="total-penerima">00.000.000</h3>
                   <p class="m-0 text-white">Total Penerima Program</p>
                 </div>
               </div>
