--- a/tanyajawab/index.html
+++ b/tanyajawab/index.html
@@ -4,23 +4,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link href="https://www.prakerja.go.id/favicon.ico" rel="shortcut icon"/>
-    <title>Tanya Jawab Indonesia Skills Week - Prakerja.go.id</title>
-    <meta name="description" content="Indonesia Skills Week adalah event dua bulanan dari Prakerja yang terbuka untuk semua golongan, termasuk alumni Prakerja. Dengan menggunakan akun Prakerja, kamu bisa memilih aneka pelatihan online yang gratis, murah, dan mudah selama 1 minggu."/>
+    <title>Tanya Jawab Statistik Program Prakerja - prakerja.go.id</title>
+    <meta name="description" content="Informasi statistik penerima prakerja selama periode 2020 - 2024."/>
     <link rel="canonical" href="https://statistik-penerima.prakerja.go.id"/>
     <link rel="alternate" hreflang="id" href="https://statistik-penerima.prakerja.go.id"/>
-    <meta property="og:image" content="https://raw.githubusercontent.com/Kartu-Prakerja/skill-week/main/img/statistik-penerima-by-prakerja-cover.jpg"/>
+    <meta property="og:image" content="https://raw.githubusercontent.com/Kartu-Prakerja/laporan-penerima/main/img/img-cover-statistik-prakerja.jpg"/>
     <meta property="og:image:width" content="400"/>
     <meta property="og:image:height" content="627"/>
     <meta property="og:locale" content="id_ID"/>
     <meta meta="meta" property="og:type" content="website"/>
-    <meta property="og:description" content="Indonesia Skills Week adalah event dua bulanan dari Prakerja yang terbuka untuk semua golongan, termasuk alumni Prakerja. Dengan menggunakan akun Prakerja, kamu bisa memilih aneka pelatihan online yang gratis, murah, dan mudah selama 1 minggu."/>
+    <meta property="og:description" content="Informasi statistik penerima prakerja selama periode 2020 - 2024."/>
     <meta property="og:site_name" content="Prakerja"/>
-    <meta property="og:url" content="https://raw.githubusercontent.com/Kartu-Prakerja/skill-week/main/img/statistik-penerima-by-prakerja-cover.jpg"/>
-    <meta name="twitter:card" content="https://raw.githubusercontent.com/Kartu-Prakerja/skill-week/main/img/statistik-penerima-by-prakerja-cover.jpg"/>
+    <meta property="og:url" content="https://raw.githubusercontent.com/Kartu-Prakerja/laporan-penerima/main/img/img-cover-statistik-prakerja.jpg"/>
+    <meta name="twitter:card" content="https://raw.githubusercontent.com/Kartu-Prakerja/laporan-penerima/main/img/img-cover-statistik-prakerja.jpg"/>
     <meta name="twitter:site" content=""/>
-    <meta name="twitter:title" content="Tanya Jawab Indonesia Skills Week - Prakerja.go.id"/>
-    <meta name="twitter:description" content="Indonesia Skills Week adalah event dua bulanan dari Prakerja yang terbuka untuk semua golongan, termasuk alumni Prakerja. Dengan menggunakan akun Prakerja, kamu bisa memilih aneka pelatihan online yang gratis, murah, dan mudah selama 1 minggu."/>
-    <meta name="twitter:image" content="https://raw.githubusercontent.com/Kartu-Prakerja/skill-week/main/img/statistik-penerima-by-prakerja-cover.jpg"/>
+    <meta name="twitter:title" content="Tanya Jawab Statistik Program Prakerja - prakerja.go.id"/>
+    <meta name="twitter:description" content="Informasi statistik penerima prakerja selama periode 2020 - 2024."/>
+    <meta name="twitter:image" content="https://raw.githubusercontent.com/Kartu-Prakerja/laporan-penerima/main/img/img-cover-statistik-prakerja.jpg"/>
     <meta name="twitter:image:width" content="1200"/>
     <meta name="twitter:image:height" content="630"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
