--- a/provinsi/index.html
+++ b/provinsi/index.html
@@ -53,7 +53,29 @@
         </div>
       </div>
     </header>
-    <main></main><!-- Footer start -->
+    <main>
+      <section class="pt-5" id="breadcrumb-detail">
+        <div class="container pt-md-5 pt-5 px-4 px-md-0">
+          <nav aria-label="breadcrumb">
+            <ol class="breadcrumb">
+              <ol class="breadcrumb overflow-hidden fs-7 mb-0">
+                <li class="breadcrumb-item"><a href="/"><i class="bi bi-house-door"></i></a></li>
+                <li class="breadcrumb-item"><a href="/jambi">Jambi </a></li>
+                <li class="breadcrumb-item active text-truncate">Semua Kabupaten</li>
+              </ol>
+            </ol>
+          </nav>
+        </div>
+      </section>
+      <div class="container py-lg-5 py-4">
+        <aside>
+          <p>sidebar</p>
+        </aside>
+        <article>
+          <h1>Provinsi</h1>
+        </article>
+      </div>
+    </main><!-- Footer start -->
     <footer class="section-footer">
       <div class="top-wrapper">
         <div class="container pt-4 pt-md-5 px-4 px-md-0">
