--- a/provinsi/index.html
+++ b/provinsi/index.html
@@ -67,14 +67,37 @@
           </nav>
         </div>
       </section>
-      <div class="container py-lg-5 py-4">
-        <aside>
-          <p>sidebar</p>
-        </aside>
-        <article>
-          <h1>Provinsi</h1>
-        </article>
-      </div>
+      <section class="py-lg-5 py-4"> 
+        <div class="container"> 
+          <div class="row"> 
+            <div class="col-lg-3">
+              <div class="list-group"><a class="list-group-item list-group-item-action active" href="#" aria-current="true">Semua Kabupaten / Kota</a><a class="list-group-item list-group-item-action" href="#">Kabupaten Batanghari</a><a class="list-group-item list-group-item-action" href="#">Kabupaten Bungo</a><a class="list-group-item list-group-item-action" href="#">Kabupaten Kerinci</a><a class="list-group-item list-group-item-action" href="#">Kabupaten Merangin</a><a class="list-group-item list-group-item-action" href="#">Kabupaten Muaro Jambi</a><a class="list-group-item list-group-item-action" href="#">Kabupaten Sarolangun</a><a class="list-group-item list-group-item-action" href="#">Kabupaten Tanjung Jabung Barat</a><a class="list-group-item list-group-item-action" href="#">Kabupaten Tanjung Jabung Timur</a><a class="list-group-item list-group-item-action" href="#">Kabupaten Tebo</a><a class="list-group-item list-group-item-action" href="#">Kota Jambi</a><a class="list-group-item list-group-item-action" href="#">Kota Sungai Penuh</a></div>
+            </div>
+            <div class="col-lg-9">
+              <div class="row bg-s100" style="min-height:320px"> 
+                <div class="col-lg-8"> 
+                  <p>Map Canvas </p>
+                </div>
+                <div class="col-lg-4 bg-s200 p-3">
+                  <div>
+                    <div class="h6">Provinsi</div>
+                    <h1>Jambi </h1>
+                    <div class="h6">Pulau Sumatera</div>
+                  </div>
+                  <hr>
+                  <p> <i>/ fun fact /</i></p>
+                  <div class="h3">
+                     17</div>
+                  <p class="fs-7">Provinsi Jambi berada di peringkat ke-17 penerima terbanyak Prakerja dari 38 provinsi selama periode 2020-2024 (per Juli 2024)</p>
+                </div>
+              </div>
+              <section class="py-lg-5 py-4">
+                <h4>Profil Penerima Manfaat</h4>
+              </section>
+            </div>
+          </div>
+        </div>
+      </section>
     </main><!-- Footer start -->
     <footer class="section-footer">
       <div class="top-wrapper">
