--- a/provinsi/index.html
+++ b/provinsi/index.html
@@ -98,9 +98,7 @@
                   <div class="col-12 p-2 bg-b100 rounded mb-4">
                     <h6 class="m-0">Jenis Kelamin</h6>
                   </div>
-                  <div class="col-lg-6"> 
-                    <p>e charts </p>
-                  </div>
+                  <div class="col-lg-6"> <span class="skeleton-box w-100 rounded" style="height:200px"></span></div>
                   <div class="col-lg-6">
                     <table class="table table-hover fs-7">
                       <thead>
@@ -129,9 +127,7 @@
                   <div class="col-12 p-2 bg-b100 rounded mb-4">
                     <h6 class="m-0">Rentang Umur</h6>
                   </div>
-                  <div class="col-lg-6"> 
-                    <p>e charts </p>
-                  </div>
+                  <div class="col-lg-6"> <span class="skeleton-box w-100 rounded" style="height:200px"></span></div>
                   <div class="col-lg-6">
                     <table class="table table-hover fs-7">
                       <thead>
@@ -175,9 +171,7 @@
                   <div class="col-12 p-2 bg-b100 rounded mb-4">
                     <h6 class="m-0">Pendidikan Terakhir</h6>
                   </div>
-                  <div class="col-lg-6"> 
-                    <p>e charts </p>
-                  </div>
+                  <div class="col-lg-6"> <span class="skeleton-box w-100 rounded" style="height:200px"></span></div>
                   <div class="col-lg-6">
                     <table class="table table-hover fs-7">
                       <thead>
@@ -231,9 +225,7 @@
                   <div class="col-12 p-2 bg-b100 rounded mb-4">
                     <h6 class="m-0">Status Pekerjaan</h6>
                   </div>
-                  <div class="col-lg-6"> 
-                    <p>e charts </p>
-                  </div>
+                  <div class="col-lg-6"> <span class="skeleton-box w-100 rounded" style="height:200px"></span></div>
                   <div class="col-lg-6">
                     <table class="table table-hover fs-7">
                       <thead>
@@ -272,9 +264,7 @@
                   <div class="col-12 p-2 bg-b100 rounded mb-4">
                     <h6 class="m-0">Moda Pelatihan</h6>
                   </div>
-                  <div class="col-lg-6"> 
-                    <p>e charts </p>
-                  </div>
+                  <div class="col-lg-6"> <span class="skeleton-box w-100 rounded" style="height:200px"></span></div>
                   <div class="col-lg-6">
                     <table class="table table-hover fs-7">
                       <thead>
