--- a/tanyajawab/index.html
+++ b/tanyajawab/index.html
@@ -29,6 +29,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="crossorigin"/>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,400;1,700&amp;family=Poppins:wght@700;900&amp;display=swap" rel="stylesheet"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css"/>
+    <link rel="stylesheet" href="https://cdn.datatables.net/2.1.4/css/dataTables.dataTables.css"/>
     <link rel="stylesheet" href="../css/bootstrap.css"/>
     <link rel="stylesheet" href="../css/pds-penerima.css"/>
     <link rel="stylesheet" href="../css/owl.carousel.css"/>
@@ -49,6 +50,12 @@
             </li>
             <li class="nav-item md-hide"><a class="nav-link" href="../index.html">Beranda</a></li>
             <li class="nav-item md-hide"><a class="nav-link nav-link-active" href="../tanyajawab/index.html">Tanya Jawab</a></li>
+            <li class="nav-item md-hide">
+              <div class="input-group custom-search-2 search-only">
+                <button class="btn btn-outline-light" id="button-addon1" type="button"><i class="bi bi-search"></i></button>
+                <input class="form-control" type="text" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" placeholder="Cari provinsi / kabupaten..."/>
+              </div>
+            </li>
           </ul>
         </div>
       </div>
@@ -952,6 +959,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.13.6/underscore-min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://cdn.datatables.net/2.1.4/js/dataTables.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/echarts/5.5.0/echarts.min.js" referrerpolicy="no-referrer"></script>
   <script src="../js/function.js"></script>
 </html>
