--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
            Statistik Program <span>Prakerja</span></h1>
         <div class="container-fluid" id="maps-indonesia"></div>
       </section>
-      <section class="section-course py-3 py-lg-5">
+      <section class="section-course py-4 pt-lg-5">
         <div class="container px-4 px-md-0">
           <div class="row text-center">
             <h4>Persebaran Penerima</h4>
@@ -246,8 +246,67 @@
       <section class="section-course py-3 py-lg-5">
         <div class="container px-4 px-md-0">
           <div class="row text-center">
-            <h4>Profil Penerima</h4>
-            <div class="col-lg-6"> </div>
+            <h4 class="mb-4">Profil Penerima</h4>
+            <div class="col-lg-6">
+              <div class="border p-4 d-flex rounded-3 gap-3 mb-4"><img src="img/img-people.svg" alt="">
+                <div class="text-start">
+                  <h6 class="h1 text-primary">18.887.737</h6>
+                  <p class="mb-0">Total Penerima Program</p>
+                </div>
+              </div>
+              <div class="border p-4 d-flex rounded-3 mb-4 bg-map-indonesia">
+                <div class="text-start">
+                  <h6 class="h1 text-primary">100%</h6>
+                  <p class="mb-0">Mencakup seluruh wilayah provinsi, kabupaten/kota, dan kecamatan di Indonesia.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-6">
+              <div id="jenisKelaimin"><span class="skeleton-box w-100 rounded" style="height:300px"></span></div>
+            </div>
+            <div class="col-lg-6">
+              <div id="umur"><span class="skeleton-box w-100 rounded" style="height:300px"></span></div>
+            </div>
+            <div class="col-lg-6">
+              <div id="pendidikanTerakhir"><span class="skeleton-box w-100 rounded" style="height:300px"></span></div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="section-course py-3 py-lg-5">
+        <div class="container px-4 px-md-0">
+          <div class="row text-center">
+            <h4 class="mb-4">Insentif</h4>
+            <div class="col-lg-12 mb-4">
+              <div id="rekeningPenerimaanInsentif">
+                <h6>Rekening Penerimaan Insentif</h6><span class="skeleton-box w-100 rounded" style="height:300px"></span>
+              </div>
+            </div>
+            <div class="col-lg-12 mb-4">
+              <h6>Pemanfaatan Insentif</h6>
+              <div class="row d-flex justify-content-center">
+                <div class="col-lg-2 col-md-6 bg-b800"><img src="img/img-bowl-food.svg" alt="">
+                  <h5>88%</h5>
+                  <p>Kebutuhan Pokok</p>
+                </div>
+                <div class="col-lg-2 col-md-6 bg-t500"><img src="img/img-bowl-food.svg" alt="">
+                  <h5>88%</h5>
+                  <p>Kebutuhan Pokok</p>
+                </div>
+                <div class="col-lg-2 col-md-6 bg-y500"><img src="img/img-bowl-food.svg" alt="">
+                  <h5>88%</h5>
+                  <p>Kebutuhan Pokok</p>
+                </div>
+                <div class="col-lg-2 col-md-6 bg-o500"><img src="img/img-bowl-food.svg" alt="">
+                  <h5>88%</h5>
+                  <p>Kebutuhan Pokok</p>
+                </div>
+                <div class="col-lg-2 col-md-6 bg-b500"><img src="img/img-bowl-food.svg" alt="">
+                  <h5>88%</h5>
+                  <p>Kebutuhan Pokok</p>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </section>
