--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,400;1,700&amp;family=Poppins:wght@700;900&amp;display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,400;1,700&amp;family=Poppins:wght@600;700;900&amp;display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdn.datatables.net/2.1.4/css/dataTables.dataTables.css">
     <link rel="stylesheet" href="css/bootstrap.css">
@@ -201,7 +201,7 @@
                 </tr>
                 <tr> 
                   <td class="text-start"><a href="#">Kep. Bangka Belitung</a></td>
-                  <td style="background:rgba(42, 114, 199, .0)">2</td>
+                  <td style="background:rgba(42, 114, 199, .5)">2</td>
                   <td style="background:rgba(42, 114, 199, 0)">3</td>
                   <td style="background:rgba(42, 114, 199, 0)">4</td>
                   <td style="background:rgba(42, 114, 199, 0)">5</td>
@@ -262,7 +262,7 @@
               </div>
             </div>
             <div class="col-lg-6">
-              <div id="jenisKelaimin"><span class="skeleton-box w-100 rounded" style="height:300px"></span></div>
+              <div id="jenisKelamin" style="height:300px"></div>
             </div>
             <div class="col-lg-6">
               <div id="umur"><span class="skeleton-box w-100 rounded" style="height:300px"></span></div>
@@ -284,26 +284,26 @@
             </div>
             <div class="col-lg-12 mb-4">
               <h6>Pemanfaatan Insentif</h6>
-              <div class="row d-flex justify-content-center">
-                <div class="col-lg-2 col-md-6 bg-b800"><img src="img/img-bowl-food.svg" alt="">
-                  <h5>88%</h5>
-                  <p>Kebutuhan Pokok</p>
+              <div class="row px-3">
+                <div class="col-6 col-lg-20 col-md-6 bg-b800 p-4 rounded-lg-start"><img class="mb-3" src="img/img-bowl-food.svg" alt="">
+                  <h5 class="text-white">88%</h5>
+                  <p class="text-white mb-0 fs-7">Kebutuhan Pokok</p>
                 </div>
-                <div class="col-lg-2 col-md-6 bg-t500"><img src="img/img-bowl-food.svg" alt="">
-                  <h5>88%</h5>
-                  <p>Kebutuhan Pokok</p>
+                <div class="col-6 col-lg-20 col-md-6 bg-t500 p-4"><img class="mb-3" src="img/img-money-hand.svg" alt="">
+                  <h5 class="text-white">67%</h5>
+                  <p class="text-white mb-0 fs-7">Sebagai Modal Usaha</p>
                 </div>
-                <div class="col-lg-2 col-md-6 bg-y500"><img src="img/img-bowl-food.svg" alt="">
-                  <h5>88%</h5>
-                  <p>Kebutuhan Pokok</p>
+                <div class="col-6 col-lg-20 col-md-6 bg-y500 p-4"><img class="mb-3" src="img/img-wifi.svg" alt="">
+                  <h5 class="text-white">57%</h5>
+                  <p class="text-white mb-0 fs-7">Membeli Paket Data / Internet</p>
                 </div>
-                <div class="col-lg-2 col-md-6 bg-o500"><img src="img/img-bowl-food.svg" alt="">
-                  <h5>88%</h5>
-                  <p>Kebutuhan Pokok</p>
+                <div class="col-6 col-lg-20 col-md-6 bg-o500 p-4"><img class="mb-3" src="img/img-online-learning.svg" alt="">
+                  <h5 class="text-white">48%</h5>
+                  <p class="text-white mb-0 fs-7">Kegiatan Penunjang Belajar Lain</p>
                 </div>
-                <div class="col-lg-2 col-md-6 bg-b500"><img src="img/img-bowl-food.svg" alt="">
-                  <h5>88%</h5>
-                  <p>Kebutuhan Pokok</p>
+                <div class="col-12 col-lg-20 col-md-12 bg-b500 p-4 rounded-lg-end"><img class="mb-3" src="img/img-external-learning.svg" alt="">
+                  <h5 class="text-white">31%</h5>
+                  <p class="text-white mb-0 fs-7">Pembelian Pelatihan di Luar Prakerja</p>
                 </div>
               </div>
             </div>
