--- a/index.html
+++ b/index.html
@@ -310,6 +310,48 @@
           </div>
         </div>
       </section>
+      <section class="section-course py-3 py-lg-5">
+        <div class="container px-4 px-md-0">
+          <div class="row text-center">
+            <h4 class="mb-3">Inklusivitas</h4>
+            <div class="col-lg-3 img-pmi rounded-start-3 d-flex align-items-end p-3 text-start">
+              <div>
+                <h4 class="display-4 text-white">3%</h4>
+                <h5 class="text-white">Purna PMI</h5>
+              </div>
+            </div>
+            <div class="col-lg-3 img-desil d-flex align-items-end p-3 text-start">
+              <div>
+                <h4 class="display-4 text-white">10%</h4>
+                <h5 class="text-white">Purna Desil 1</h5>
+              </div>
+            </div>
+            <div class="col-lg-3 img-difabel d-flex align-items-end p-3 text-start">
+              <div>
+                <h4 class="display-4 text-white">3%</h4>
+                <h5 class="text-white">Purna Difabel</h5>
+              </div>
+            </div>
+            <div class="col-lg-3 img-perdesaan rounded-end-3 d-flex align-items-end p-3 text-start">
+              <div>
+                <h4 class="display-4 text-white">65%</h4>
+                <h5 class="text-white">Purna Perdesaan</h5>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="section-course py-3 py-lg-5">
+        <div class="container px-4 px-md-0">
+          <div class="row text-center">
+            <h4 class="mb-3">Lembaga Pelatihan</h4>
+            <div class="col-lg-6 border rounded-3 p-4 pb-0 ellipse">
+              <div class="h5 fw-bold">4 Pilihan Moda Pelatihan</div>
+              <p class="p-1 text-secondary">Moda pelatihan yang dapat dipilih penerima Prakerja :</p><img class="mw-100" src="../img/phone.webp" alt="">
+            </div>
+          </div>
+        </div>
+      </section>
     </main><!-- Footer start -->
     <footer class="section-footer">
       <div class="top-wrapper">
