--- a/html/home/section_testimony.html
+++ b/html/home/section_testimony.html
@@ -1,2 +1,6 @@
 
-<h3>Apa Kata Mereka?</h3>
+<section class="section-course py-3 py-lg-5">
+  <div class="container px-4 px-md-0">
+    <h3>Studi Case </h3>
+  </div>
+</section>
