--- a/index.html
+++ b/index.html
@@ -278,9 +278,8 @@
           <div class="row text-center">
             <h4 class="mb-4">Insentif</h4>
             <div class="col-lg-12 mb-4">
-              <div id="rekeningPenerimaanInsentif">
-                <h6>Rekening Penerimaan Insentif</h6><span class="skeleton-box w-100 rounded" style="height:300px"></span>
-              </div>
+              <h6>Rekening Penerimaan Insentif</h6>
+              <div id="rekeningPenerimaanInsentif"><span class="skeleton-box w-100 rounded" style="height:300px"></span></div>
             </div>
             <div class="col-lg-12 mb-4">
               <h6>Pemanfaatan Insentif</h6>
@@ -307,7 +306,45 @@
                 </div>
               </div>
             </div>
+            <div class="col-lg-12 mb-4">
+              <h6>Manfaat yang dirasakan setelah mengikuti Program Prakerja</h6>
+              <div id="rekeningPenerimaanInsentif"><span class="skeleton-box w-100 rounded" style="height:300px"></span></div>
+            </div>
+            <div class="col-lg-12 mb-4">
+              <h6>Pemanfaatan Insentif</h6>
+              <div class="row gap-0 d-flex align-items-end">
+                <div class="col-lg-3 m-0 p-0">
+                  <div class="p-4 bg-b600 text-start">
+                    <h5 class="h1 text-white pt-md-5">96%</h5>
+                    <p class="m-0 text-white">Meningkatkan kompetensi</p>
+                  </div>
+                </div>
+                <div class="col-lg-3 m-0 p-0">
+                  <div class="p-4 bg-b500 text-start">
+                    <h5 class="h1 text-white pt-md-4">95%</h5>
+                    <p class="m-0 text-white">Meningkatkan produktivitas kerja</p>
+                  </div>
+                </div>
+                <div class="col-lg-3 m-0 p-0">
+                  <div class="p-4 bg-b400 text-start">
+                    <h5 class="h1 text-white pt-md-3">94%</h5>
+                    <p class="m-0 text-white">Meningkatkan daya saing kerja</p>
+                  </div>
+                </div>
+                <div class="col-lg-3 m-0 p-0">
+                  <div class="p-4 bg-b300 text-start">
+                    <h5 class="h1 text-white pt-md-2">92%</h5>
+                    <p class="m-0 text-white">Mendorong kewirausahaan</p>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
+        </div>
+      </section>
+      <section class="section-course py-3 py-lg-5">
+        <div class="container px-4 px-md-0">
+          <h3>Studi Case </h3>
         </div>
       </section>
     </main><!-- Footer start -->
