--- a/html/home/section_insentif.html
+++ b/html/home/section_insentif.html
@@ -3,6 +3,68 @@
   <div class="container px-4 px-md-0">
     <div class="row text-center">
       <h4 class="mb-4">Insentif</h4>
+      <div class="col-lg-12 mb-4">
+        <h6>Rekening Penerimaan Insentif</h6>
+        <div id="rekeningPenerimaanInsentif"><span class="skeleton-box w-100 rounded" style="height:300px"></span></div>
+      </div>
+      <div class="col-lg-12 mb-4">
+        <h6>Pemanfaatan Insentif</h6>
+        <div class="row px-3">
+          <div class="col-6 col-lg-20 col-md-6 bg-b800 p-4 rounded-lg-start"><img class="mb-3" src="img/img-bowl-food.svg" alt=""/>
+            <h5 class="text-white">88%</h5>
+            <p class="text-white mb-0 fs-7">Kebutuhan Pokok</p>
+          </div>
+          <div class="col-6 col-lg-20 col-md-6 bg-t500 p-4"><img class="mb-3" src="img/img-money-hand.svg" alt=""/>
+            <h5 class="text-white">67%</h5>
+            <p class="text-white mb-0 fs-7">Sebagai Modal Usaha</p>
+          </div>
+          <div class="col-6 col-lg-20 col-md-6 bg-y500 p-4"><img class="mb-3" src="img/img-wifi.svg" alt=""/>
+            <h5 class="text-white">57%</h5>
+            <p class="text-white mb-0 fs-7">Membeli Paket Data / Internet</p>
+          </div>
+          <div class="col-6 col-lg-20 col-md-6 bg-o500 p-4"><img class="mb-3" src="img/img-online-learning.svg" alt=""/>
+            <h5 class="text-white">48%</h5>
+            <p class="text-white mb-0 fs-7">Kegiatan Penunjang Belajar Lain</p>
+          </div>
+          <div class="col-12 col-lg-20 col-md-12 bg-b500 p-4 rounded-lg-end"><img class="mb-3" src="img/img-external-learning.svg" alt=""/>
+            <h5 class="text-white">31%</h5>
+            <p class="text-white mb-0 fs-7">Pembelian Pelatihan di Luar Prakerja</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-12 mb-4">
+        <h6>Manfaat yang dirasakan setelah mengikuti Program Prakerja</h6>
+        <div id="rekeningPenerimaanInsentif"><span class="skeleton-box w-100 rounded" style="height:300px"></span></div>
+      </div>
+      <div class="col-lg-12 mb-4">
+        <h6>Pemanfaatan Insentif</h6>
+        <div class="row gap-0 d-flex align-items-end">
+          <div class="col-lg-3 m-0 p-0">
+            <div class="p-4 bg-b600 text-start">
+              <h5 class="h1 text-white pt-md-5">96%</h5>
+              <p class="m-0 text-white">Meningkatkan kompetensi</p>
+            </div>
+          </div>
+          <div class="col-lg-3 m-0 p-0">
+            <div class="p-4 bg-b500 text-start">
+              <h5 class="h1 text-white pt-md-4">95%</h5>
+              <p class="m-0 text-white">Meningkatkan produktivitas kerja</p>
+            </div>
+          </div>
+          <div class="col-lg-3 m-0 p-0">
+            <div class="p-4 bg-b400 text-start">
+              <h5 class="h1 text-white pt-md-3">94%</h5>
+              <p class="m-0 text-white">Meningkatkan daya saing kerja</p>
+            </div>
+          </div>
+          <div class="col-lg-3 m-0 p-0">
+            <div class="p-4 bg-b300 text-start">
+              <h5 class="h1 text-white pt-md-2">92%</h5>
+              <p class="m-0 text-white">Mendorong kewirausahaan</p>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </section>
