--- a/index.html
+++ b/index.html
@@ -246,6 +246,36 @@
       <section class="section-course py-3 py-lg-5">
         <div class="container px-4 px-md-0">
           <div class="row text-center">
+            <h4 class="mb-4">Profil Penerima</h4>
+            <div class="col-lg-6">
+              <div class="border p-4 d-flex rounded-3 gap-3 mb-4"><img src="img/img-people.svg" alt="">
+                <div class="text-start">
+                  <h6 class="h1 text-primary">18.887.737</h6>
+                  <p class="mb-0">Total Penerima Program</p>
+                </div>
+              </div>
+              <div class="border p-4 d-flex rounded-3 mb-4 bg-map-indonesia">
+                <div class="text-start">
+                  <h6 class="h1 text-primary">100%</h6>
+                  <p class="mb-0">Mencakup seluruh wilayah provinsi, kabupaten/kota, dan kecamatan di Indonesia.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-6">
+              <div id="jenisKelamin" style="height:300px"></div>
+            </div>
+            <div class="col-lg-6">
+              <div id="umur"><span class="skeleton-box w-100 rounded" style="height:300px"></span></div>
+            </div>
+            <div class="col-lg-6">
+              <div id="pendidikanTerakhir"><span class="skeleton-box w-100 rounded" style="height:300px"></span></div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="section-course py-3 py-lg-5">
+        <div class="container px-4 px-md-0">
+          <div class="row text-center">
             <h4 class="mb-3">Inklusivitas</h4>
             <div class="col-lg-3 img-pmi rounded-start-3 d-flex align-items-end p-3 text-start">
               <div>
@@ -277,40 +307,55 @@
       <section class="section-course py-3 py-lg-5">
         <div class="container px-4 px-md-0">
           <div class="row text-center">
-            <h4 class="mb-3">Lembaga Pelatihan</h4>
-            <div class="col-lg-6 border rounded-3 p-4 pb-0 ellipse">
-              <div class="h5 fw-bold">4 Pilihan Moda Pelatihan</div>
-              <p class="p-1 text-secondary">Moda pelatihan yang dapat dipilih penerima Prakerja :</p><img class="mw-100" src="../img/phone.webp" alt="">
+            <div class="col-12">
+              <h4 class="mb-3">Lembaga Pelatihan</h4>
             </div>
-          </div>
-        </div>
-      </section>
-      <section class="section-course py-3 py-lg-5">
-        <div class="container px-4 px-md-0">
-          <div class="row text-center">
-            <h4 class="mb-4">Profil Penerima</h4>
-            <div class="col-lg-6">
-              <div class="border p-4 d-flex rounded-3 gap-3 mb-4"><img src="img/img-people.svg" alt="">
-                <div class="text-start">
-                  <h6 class="h1 text-primary">18.887.737</h6>
-                  <p class="mb-0">Total Penerima Program</p>
-                </div>
-              </div>
-              <div class="border p-4 d-flex rounded-3 mb-4 bg-map-indonesia">
-                <div class="text-start">
-                  <h6 class="h1 text-primary">100%</h6>
-                  <p class="mb-0">Mencakup seluruh wilayah provinsi, kabupaten/kota, dan kecamatan di Indonesia.</p>
-                </div>
+            <div class="col-lg-6 mb-4">
+              <div class="border rounded-3 p-3">
+                <h5 class="mb-4">Total Lembaga Pelatihan</h5><span class="skeleton-box w-100 rounded" style="height:300px"></span>
               </div>
             </div>
-            <div class="col-lg-6">
-              <div id="jenisKelamin" style="height:300px"></div>
+            <div class="col-lg-6 mb-4">
+              <div class="border rounded-3 p-3">
+                <h5 class="mb-4">Total Jumlah Pelatihan</h5><span class="skeleton-box w-100 rounded" style="height:300px"></span>
+              </div>
             </div>
-            <div class="col-lg-6">
-              <div id="umur"><span class="skeleton-box w-100 rounded" style="height:300px"></span></div>
+            <div class="col-lg-6 mb-4">
+              <div class="border rounded-3 p-3 pb-0">
+                <h5 class="mb-4">4 Pilihan Moda Pelatihan</h5>
+                <p class="p-1 text-secondary">Moda pelatihan yang dapat dipilih penerima Prakerja :</p><img class="mw-100" src="../img/phone.webp" alt="">
+              </div>
             </div>
-            <div class="col-lg-6">
-              <div id="pendidikanTerakhir"><span class="skeleton-box w-100 rounded" style="height:300px"></span></div>
+            <div class="col-lg-6 mb-4">
+              <div class="border rounded-3 p-3">
+                <div class="p-3 flex-coloumn">
+                  <h5>Preferensi Moda Pelatihan</h5><span class="skeleton-box w-100 rounded" style="height:300px"></span>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-12 mb-4">
+              <h5 class="my-4">Kategori Pelatihan Terbanyak</h5><span class="skeleton-box w-100 rounded" style="height:300px"></span>
+            </div>
+            <div class="col-lg-12 mb-4">
+              <h5 class="mb-4">Kategori Pelatihan Terfavorit</h5>
+              <div class="row px-3">
+                <div class="col-6 col-lg-20 col-md-6 bg-b800 p-4 rounded-lg-start align-items-end p-3 text-start">
+                  <div></div><img class="mb-3" src="img/kat1-pelatihan.svg" alt="">
+                  <h5 class="text-white">Penjualan & Pemasaran</h5>
+                </div>
+                <div class="col-6 col-lg-20 col-md-6 bg-t500 p-4 align-items-end p-3 text-start"><img class="mb-3" src="img/kat2-pelatihan.svg" alt="">
+                  <h5 class="text-white">Gaya Hidup</h5>
+                </div>
+                <div class="col-6 col-lg-20 col-md-6 bg-y500 p-4 align-items-end p-3 text-start"><img class="mb-3" src="img/kat3-pelatihan.svg" alt="">
+                  <h5 class="text-white">Makanan dan Minuman</h5>
+                </div>
+                <div class="col-6 col-lg-20 col-md-6 bg-o500 p-4 align-items-end p-3 text-start"><img class="mb-3" src="img/kat4-pelatihan.svg" alt="">
+                  <h5 class="text-white">Manajemen</h5>
+                </div>
+                <div class="col-12 col-lg-20 col-md-12 bg-b500 p-4 rounded-lg-end align-items-end p-3 text-start"><img class="mb-3" src="img/kat5-pelatihan.svg" alt="">
+                  <h5 class="text-white">Teknik</h5>
+                </div>
+              </div>
             </div>
           </div>
         </div>
